<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HUPProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="txtuser">The medical information contained within this application is meant to
        aid in the care of Neurosurgical patients. It should not take the place of interactions
        with your physician or nurse. Please call the Neurosurgery department with any concern
        and call 911 immediately for any life-threatening condition or issue. By agreeing to use
        this application, you offer understanding of these statements.</string>
    <string name="terms">I have read and understand the statements above.</string>
    <string name="Continue">Continue</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_survery">SurveryActivity</string>

    <string name="question1">1. Is your pain uncontrolled with medication?</string>
    <string name="question2">2. Do you have any new difficulty stooling or urinating?</string>
    <string name="question3">3. Shortness of breath or leg swelling?</string>
    <string name="question4">4. Wound drainage and/or fever (temperature greater than 101.5)?</string>
    <string name="question5">5. New weakness?</string>
    <string name="comments">Any other comments or concerns?</string>
    <string name="title_activity_cameraactivity">Cameraactivity</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="title_activity_pracitioner">PracitionerActivity</string>
    <string name="title_activity_concern">ConcernActivity</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_survey_view">SurveyViewActivity</string>
    <string name="title_activity_concern_view">ConcernViewActivity</string>
    <string name="concern_prompt">"For emergencies, please call <b>911</b>. However, for less urgent worries, describe your concern in the textbook below and it will beforwarded to a nurse practitioner for review."</string>

</resources>
